# engine6

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  render_doc_settings.cap
models/avocado/: avocado.gltf  color.dds  normal.dds
shaders_build/: CMakeLists.txt
src/: log.h  utils.cpp  utils.h  version.h.in
src/renderer/vulkan/: compute.cpp  compute.h  context.cpp  context.h  context_internal.h  dear_imgui.cpp  dear_imgui.h  gltf.cpp  gltf.h  program.cpp  program.h  quad_with_vertex_and_index.cpp  quad_with_vertex_and_index.h  quad_with_vertex_index_and_texture.cpp  quad_with_vertex_index_and_texture.h  swapchain.cpp  swapchain.h  triangle.cpp  triangle.h  user_context.cpp  user_context.h  utils.cpp  utils.h
src/renderer/vulkan/shaders/: example.comp  gltf.frag  gltf.vert  particle.comp  particle.vert  quad_vertex_index.frag  quad_vertex_index_texture.frag  quad_vertex_index_texture.vert  triangle.vert  tutorial_mesh.shader.frag  tutorial_mesh.shader.vert
src/shaders/: tutorial_mesh_with_texture.shader.frag  tutorial_mesh_with_texture.shader.vert
src/win32/: main.cpp
